--- a/calidadFrontend/src/app/mis-registros/mis-registros.component.html
+++ b/calidadFrontend/src/app/mis-registros/mis-registros.component.html
@@ -18,7 +18,7 @@
             <th>Departamento</th>
             <th>Maquina</th>
             <th>No parte</th>
-            <th>Pza INSP</th>
+            <th>Pza Inspeccionada</th>
             <th>Pza Rechazada</th>
             <th>Pza Retrabajo</th>
             <th>Total Pza</th>
