--- a/calidadFrontend/src/app/tabla-calidad/tabla-calidad.component.html
+++ b/calidadFrontend/src/app/tabla-calidad/tabla-calidad.component.html
@@ -120,20 +120,20 @@
         </div>
         <div class="row g-4">
           <div class="col">
-            <label for="InputEmpleado" class="form-label" style="font-weight: bold;">Pza Inspeccionadas</label>
-            <input type="text" class="form-control" id="InputEmpleado" [value]="formatNumber(pzainspec)" disabled>
+            <label for="InputInspeccionadas" class="form-label" style="font-weight: bold;">Pza Inspeccionadas</label>
+            <input type="text" class="form-control" id="InputInspeccionadas" [value]="formatNumber(pzainspec)" disabled>
           </div>
           <div class="col">
-            <label for="InputTurno" class="form-label" style="font-weight: bold;">Pza Rechazadas</label>
-            <input type="text" class="form-control" id="InputTurno" [value]="formatNumber(pzarecha)" disabled>
+            <label for="InputRechazadas" class="form-label" style="font-weight: bold;">Pza Rechazadas</label>
+            <input type="text" class="form-control" id="InputRechazadas" [value]="formatNumber(pzarecha)" disabled>
           </div>
           <div class="col">
-            <label for="InputFecha" class="form-label" style="font-weight: bold;">Pza Retrabajo</label>
-            <input type="text" class="form-control" id="InputFecha" [value]="formatNumber(pzaretra)" disabled>
+            <label for="InputRetrabajo" class="form-label" style="font-weight: bold;">Pza Retrabajo</label>
+            <input type="text" class="form-control" id="InputRetrabajo" [value]="formatNumber(pzaretra)" disabled>
           </div>
           <div class="col">
-            <label for="InputSemana" class="form-label" style="font-weight: bold;">Total pza Rechazadas</label>
-            <input type="text" class="form-control" id="InputSemana" [value]="formatNumber(pzatotalrecha)" disabled>
+            <label for="InputTotalRechazadas" class="form-label" style="font-weight: bold;">Total pza Rechazadas</label>
+            <input type="text" class="form-control" id="InputTotalRechazadas" [value]="formatNumber(pzatotalrecha)" disabled>
           </div>
         </div>
         <div class="row">
