--- a/calidadFrontend/src/app/login/login.component.html
+++ b/calidadFrontend/src/app/login/login.component.html
@@ -17,8 +17,13 @@
         <div class="col-md-6">
           <label for="Password" class="form-label" style="font-weight: bold; font-size: 25px; color: white;">Contraseña</label>
           <div class="input-group">
-            <input [(ngModel)]="contrasenia" name="contrasenia" type="password" class="form-control" id="Password" required>
+            <input [(ngModel)]="contrasenia" name="contrasenia" type="{{ mostrarContrasenia ? 'text' : 'password' }}" class="form-control" id="Password" required>
           </div>
+        </div>
+        <div class="col-md-6">
+          <label>
+            <input type="checkbox" [(ngModel)]="mostrarContrasenia" name="mostrarcontraseña"> Mostrar contraseña
+          </label>
         </div>
         <div class="col-12">
           <button class="btn" type="submit">Ingresar</button>
