--- a/calidadFrontend/src/app/mis-registros/mis-registros.component.html
+++ b/calidadFrontend/src/app/mis-registros/mis-registros.component.html
@@ -19,7 +19,7 @@
             <th>Maquina</th>
             <th>No parte</th>
             <th>Pza Inspeccionada</th>
-            <th>Pza Rechazada</th>
+            <th>Pza Scrap</th>
             <th>Pza Retrabajo</th>
             <th>Total Pza</th>
           </tr>
@@ -40,7 +40,7 @@
             </ng-container>
             <ng-template #noResultados>
               <tr>
-                <td colspan="5" style="color: red; font-weight: bold;">Ningún resultado</td>
+                <td colspan="9" style="color: red; font-weight: bold;">Ningún resultado</td>
               </tr>
             </ng-template>
         </tbody>
