--- a/calidadFrontend/src/app/formulario-movil/formulario-movil.component.html
+++ b/calidadFrontend/src/app/formulario-movil/formulario-movil.component.html
@@ -77,12 +77,12 @@
           </div>
           <div class="col-md-6">
             <label for="recha" class="form-label" style="font-weight: bold;">Pza Scrap</label>
-            <input type="number" class="form-control" id="recha" [(ngModel)]="rechaInput" required name="rechaInput" (ngModelChange)="onRechaInputChange()">
+            <input type="number" class="form-control" id="recha" [(ngModel)]="rechaInput" required name="rechaInput">
           </div>
 
           <div class="col-md-6">
             <label for="retra" class="form-label" style="font-weight: bold;">Pza Retrabajo</label>
-            <input type="number" class="form-control" id="retra" [(ngModel)]="retraInput" required name="retraInput" (ngModelChange)="onRetraInputChange()">
+            <input type="number" class="form-control" id="retra" [(ngModel)]="retraInput" required name="retraInput">
           </div>
 
           <div class="col-md-6">
