--- a/calidadFrontend/src/app/mis-registros/mis-registros.component.html
+++ b/calidadFrontend/src/app/mis-registros/mis-registros.component.html
@@ -17,7 +17,7 @@
             <th>Fecha</th>
             <th>Departamento</th>
             <th>Maquina</th>
-            <th>No parte</th>
+            <th>Numero parte</th>
             <th>Pza Inspeccionada</th>
             <th>Pza Scrap</th>
             <th>Pza Retrabajo</th>
