--- a/calidadFrontend/src/app/tabla-calidad/tabla-calidad.component.html
+++ b/calidadFrontend/src/app/tabla-calidad/tabla-calidad.component.html
@@ -28,11 +28,12 @@
       <table class="table table-hover">
         <thead>
           <tr>
+            <th scope="col">Folio</th>
             <th scope="col">Empleado</th>
             <th scope="col">Fecha</th>
-            <th scope="col">No Depto</th>
+            <th scope="col">Numero Depto</th>
             <th scope="col">Cod Máquina</th>
-            <th scope="col">No Parte</th>
+            <th scope="col">Numero Parte</th>
             <th scope="col">P. Inspeccionadas</th>
             <th scope="col">P. Scrap</th>
             <th scope="col">P. Retrabajo</th>
@@ -42,6 +43,7 @@
         </thead>
         <tbody class="table-group-divider">
             <tr *ngFor="let registro of RegistroFinal">
+              <td>{{registro.id}}</td>
               <td>{{registro.empleados.nombre}}</td>
               <td>{{registro.fecha}}</td>
               <td>{{registro.numerodp}}</td>
