--- a/calidadFrontend/src/app/tabla-calidad/tabla-calidad.component.html
+++ b/calidadFrontend/src/app/tabla-calidad/tabla-calidad.component.html
@@ -4,7 +4,7 @@
   </section>
   <section class="contenedor">
     <section class="buscador">
-      <div class="group">
+      <section class="group">
         <section class="inicio d-flex align-items-center" style="font-weight: bold;">
           <p class="mr-2">Inicio:</p>
           <input type="date" class="input" id="Inicio" [(ngModel)]="fechaInicio">
@@ -22,7 +22,7 @@
         <section class="exportar">
           <button class="btn" type="button" id="exportar" (click)="exportToExcel()">Exportar</button>
         </section>
-      </div>
+      </section>
     </section>
     <section class="tabla-contenedor">
       <table class="table table-hover">
