--- a/calidadFrontend/src/app/formulario-movil/formulario-movil.component.css
+++ b/calidadFrontend/src/app/formulario-movil/formulario-movil.component.css
@@ -1,14 +1,19 @@
 .contenedor{
-  margin-top: 7%;
+  margin-top: 10%;
 }
 .formulario{
   margin: 0 5%;
 }
 #botones{
   margin-top: 1%;
-  display: grid;
-  grid-template-columns: repeat(2,1fr);
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
+#botones .btn{
+  width: 20%;
+}
+
 
 #ver{
   margin-top: 30px;
@@ -57,10 +62,9 @@
   padding: 0 50%;
   grid-gap: 20px;
 }
-
-@media (max-width: 600px) {
+@media (max-width: 850px) {
   .contenedor{
-    margin-top: 18%;
+    margin-top: 15%;
   }
   #botones{
     margin-top: 5%;
@@ -116,4 +120,75 @@
     grid-template-columns: repeat(2,max-width);
     margin: 2% 25%;
   }
+}
+
+@media (max-width: 600px) {
+  .contenedor{
+    margin-top: 20%;
+  }
+  #botones{
+    margin-top: 5%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  #botones #btn{
+    width: 40%;
+  }
+  #ver{
+    margin-top: 10%;
+  }
+  #btn{
+    width: 100%;
+  }
+  select{
+    font-size: 12px;
+  }
+  #Semana, #NoDepto, #CodMq, #NoParte{
+    font-size: 13px;
+  }
+  .row .col-md-6 input{
+    width: 100%;
+  }
+  #piezas{
+    display: grid;
+    grid-template-columns: repeat(2,1fr);
+  }
+  /*para la tabla de defectos*/
+  .tabla-defectoRecha{
+    margin-top: 5%;
+    max-height: 650px;
+  }
+  .tabla-defectoRetra{
+    margin-top: 5%;
+    max-height: 650px;
+  }
+  .modal-content .modal-header{
+    height: 50px;
+  }
+  .modal-body{
+    padding: 1% 3%;
+  }
+  /*nuevo*/
+  .boton{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  #Footer{
+    display: grid;
+    grid-template-columns: repeat(2,max-width);
+    margin: 2% 25%;
+  }
+  #movil-grid{
+    display: grid;
+    grid-template-columns: max-content 50%;
+    grid-gap: 3%;
+    margin-top: 2%;
+  }
+  #cantidades{
+    display: grid;
+    grid-template-columns: repeat(2,1fr);
+  }
+
 }
