--- a/calidadFrontend/src/app/mis-registros/mis-registros.component.css
+++ b/calidadFrontend/src/app/mis-registros/mis-registros.component.css
@@ -68,10 +68,20 @@ th {
   z-index: 1;
   color: white;
 }
+@media (max-width: 850px) {
+  .contenedor{
+    margin-top: 15%;
+  }
+  .tabla-contenedor{
+    margin-top: 2%;
+    max-height: 1000px;
+  }
+
+}
 
 @media (max-width: 600px) {
   .contenedor{
-    margin-top: 25%;
+    margin-top: 20%;
   }
   .tabla-contenedor{
     margin-top: 5%;
