--- a/calidadFrontend/src/app/tabla-calidad/tabla-calidad.component.css
+++ b/calidadFrontend/src/app/tabla-calidad/tabla-calidad.component.css
@@ -121,9 +121,83 @@ li {
  }
 
 
-@media only screen and (max-width: 767px) {
+ @media only screen and (max-width: 600px) and (orientation: portrait){
+  .buscador{
+    margin-top: 20%;
+  }
+
+  /*----*/
+  .inicio,.final {
+    font-weight: bold;
+  }
+  .inicio p,.final p {
+    display: none; /* Oculta el texto 'Inicio' en tabletas y móviles */
+  }
+
+ /*---*/
+ .buscador .group{
+  display: grid;
+  grid-template-columns: repeat(4,min-content);
+ }
+ .group .input{
+  width: 100px;
+ }
+ .group .btn{
+  width: min-content;
+ }
+ .tabla-contenedor{
+  margin-top: 5%;
+  max-height: 650px;
+}
+table, thead, tbody, th, td, tr {
+  display: block;
+}
+
+th {
+  position: absolute;
+  top: -9999px;
+  left: -9999px;
+}
+
+tr {
+  border: 1px solid #dddddd;
+  margin-bottom: 10px;
+}
+
+td {
+  border: none;
+  border-bottom: 1px solid #dddddd;
+  position: relative;
+  padding-left: 50%;
+}
+
+td:before {
+  position: absolute;
+  top: 6px;
+  left: 6px;
+  width: 45%;
+  padding-right: 10px;
+  white-space: nowrap;
+  color: #005ba2;
+  font-weight: bold;
+}
+
+td:nth-of-type(1):before { content: "Folio"; }
+td:nth-of-type(2):before { content: "Empleado"; }
+td:nth-of-type(3):before { content: "Fecha"; }
+td:nth-of-type(4):before { content: "Departamento"; }
+td:nth-of-type(5):before { content: "Maquina"; }
+td:nth-of-type(6):before { content: "Parte"; }
+td:nth-of-type(7):before { content: "Pza Inpeccionadas"; }
+td:nth-of-type(8):before { content: "Pza Scrap"; }
+td:nth-of-type(9):before { content: "Pza Retrabajo"; }
+td:nth-of-type(10):before { content: "Total Pza"; }
+td:nth-of-type(11):before { content: "Acciones"; }
+}
+
+@media only screen and (max-width: 850px) {
   .contenedor{
-    margin-top: 30%;
+    margin-top: 15%;
   }
   .buscador{
     margin-left: 0;
@@ -139,6 +213,6 @@ li {
   }
   .group {
     max-width: 200px;
-    margin-left: 15%;
+    margin-left: 15px;
   }
 }
