--- a/portal/src/app/Empleado/formulario-registro/formulario-registro.component.html
+++ b/portal/src/app/Empleado/formulario-registro/formulario-registro.component.html
@@ -1,1 +1,82 @@
-<p>formulario-registro works!</p>
+
+<body>
+  <section class="header">
+    <app-header-empleado></app-header-empleado>
+  </section>
+  <div class="container-md">
+    <div class="container text-center">
+      <form class="row align-items-start" [formGroup]="formRegistro" (ngSubmit)="submit()">
+        <div class="row">
+          <div class="col col-4 col-sm-3 col-lg-3">
+            <label for="turno" class="form-label" style="font-weight: bold; display: flex; justify-content: start;">Turno</label>
+              <select formControlName="turno" name="turno" class="form-select form-select-sm" id="turno" aria-label="Default select example" required>
+                <option selected disabled>Seleccionar</option>
+                <option value="1">1</option>
+                <option value="2">2</option>
+              </select>
+          </div>
+          <div class="col col-4 col-sm-3 col-lg-3">
+            <label for="fecha" class="form-label" style="font-weight: bold; display: flex; justify-content: start;">Fecha</label>
+              <input formControlName="fecha" name="fecha" type="date" class="form-control form-control-sm" id="fecha" required>
+          </div>
+          <div class="col col-4 col-sm-3 col-lg-3">
+            <label for="semana" class="form-label" style="font-weight: bold; display: flex; justify-content: start;">Semana</label>
+              <input type="text" class="form-control form-control-sm" id="semana" disabled>
+          </div>
+        </div>
+        <div class="col col-sm-12 col-md-8 col-lg-6">
+          <label for="departamento" class="form-label" style="font-weight: bold; display: flex; justify-content: start;">Departamento</label>
+          <select formControlName="numerodp" name="numerodp" (change)="actualizarNoDepto()" class="form-select form-select-sm" id="departamento">
+            <option selected disabled>Seleccionar</option>
+            <option  [value]="1">1</option>
+          </select>
+        </div>
+        <div class="col col-12 col-md-4 col-lg-4" id="colMovil">
+          <label for="numerodp" class="form-label" style="font-weight: bold; display: flex; justify-content: start;">Número</label>
+          <input type="text" class="form-control form-control-sm" id="numerodp" [value]="numeroDeptoSeleccionado" disabled>
+        </div>
+        <div class="col col-sm-12 col-md-8 col-lg-6">
+          <label for="maquina" class="form-label" style="font-weight: bold; display: flex; justify-content: start;">Máquina</label>
+            <select formControlName="codigomq" name="codigomq" (change)="actualizarCodMq()" class="form-select form-select-sm" id="maquina" >
+              <option selected disabled>Seleccionar</option>
+              <option [value]="2">2</option>
+            </select>
+        </div>
+        <div class="col col-12 col-md-4 col-lg-4" id="colMovil">
+          <label for="codigomq" class="form-label" style="font-weight: bold; display: flex; justify-content: start;">Código</label>
+            <input type="email" class="form-control form-control-sm" id="codigomq" [value]="codigoMaquinaSeleccionado" disabled>
+        </div>
+        <div class="col col-sm-12 col-md-8 col-lg-6">
+          <label for="subensamble" class="form-label" style="font-weight: bold; display: flex; justify-content: start;">Subensamble</label>
+            <select formControlName="numerop" name="numerop" (change)="actualizarNumPt()" class="form-select form-select-sm" id="subensamble" >
+              <option selected disabled>Seleccionar</option>
+              <option [value]="3">3</option>
+            </select>
+        </div>
+        <div class="col col-12 col-md-4 col-lg-4" id="colMovil">
+          <label for="numerop" class="form-label" style="font-weight: bold; display: flex; justify-content: start;">Número</label>
+            <input type="text" class="form-control form-control-sm" id="numerop" [value]="numParteSeleccionado" disabled>
+        </div>
+        <div class="col col-6 col-sm-3 col-lg-3">
+          <label for="pzaInsp" class="form-label" style="font-weight: bold; display: flex; justify-content: start;">Pza Insp.</label>
+            <input formControlName="pzainspc" name="pzaInsp" type="number" class="form-control form-control-sm" id="pzaInsp">
+        </div>
+        <div class="col col-6 col-sm-3 col-lg-3">
+          <label for="pzaScrap" class="form-label" style="font-weight: bold; display: flex; justify-content: start;">Pza Scrap</label>
+            <input formControlName="pzarecha" type="number" class="form-control form-control-sm" id="pzaScrap" name="pzaScrap">
+        </div>
+        <div class="col col-6 col-sm-3 col-lg-3">
+          <label for="pzaRetra" class="form-label" style="font-weight: bold; display: flex; justify-content: start;">Pza Retrabajo</label>
+            <input formControlName="pzaretra" type="number" class="form-control form-control-sm" id="pzaRetra" name="pzaRetra">
+        </div>
+        <div class="col col-6 col-sm-3 col-lg-3">
+          <label for="total" class="form-label" style="font-weight: bold; display: flex; justify-content: start;">Tot Rechazadas</label>
+            <input type="number" class="form-control form-control-sm" name="total" id="total" required name="valorInput" [value]="valorInput" disabled>
+        </div>
+        <div class="col" style="margin-top:2% ;">
+          <button class="btn btn-primary" type="submit">Registrar</button>
+        </div>
+      </form>
+    </div>
+  </div>
+</body>
