--- a/portal/src/app/altaInformacion/alta-empleados/alta-empleados.component.html
+++ b/portal/src/app/altaInformacion/alta-empleados/alta-empleados.component.html
@@ -7,7 +7,7 @@
       <button type="button" id="btn" class="btn" data-bs-toggle="modal" data-bs-target="#staticBackdrop">Nuevo Empleado</button>
       <div class="group">
         <svg class="icon" aria-hidden="true" viewBox="0 0 24 24"><g><path d="M21.53 20.47l-3.66-3.66C19.195 15.24 20 13.214 20 11c0-4.97-4.03-9-9-9s-9 4.03-9 9 4.03 9 9 9c2.215 0 4.24-.804 5.808-2.13l3.66 3.66c.147.146.34.22.53.22s.385-.073.53-.22c.295-.293.295-.767.002-1.06zM3.5 11c0-4.135 3.365-7.5 7.5-7.5s7.5 3.365 7.5 7.5-3.365 7.5-7.5 7.5-7.5-3.365-7.5-7.5z"></path></g></svg>
-        <input placeholder="Buscar" type="search" class="input">
+        <input placeholder="Buscar" type="search" class="input" [(ngModel)]="filtroBusqueda">
       </div>
     </section>
     <section class="tabla-contenedor">
@@ -33,8 +33,6 @@
               <td>{{empleado.perfil}}</td>
               <td>{{empleado.estatus}}</td>
               <td>
-                <!--<svg class="editar" data-bs-toggle="modal" data-bs-target="#staticBackdrop2" xmlns="http://www.w3.org/2000/svg" width="30" height="30" viewBox="0 0 24 24">
-                  <title>Editar</title><path fill="#eab308" d="M5 21q-.825 0-1.412-.587T3 19V5q0-.825.588-1.412T5 3h8.925l-2 2H5v14h14v-6.95l2-2V19q0 .825-.587 1.413T19 21zm4-6v-4.25l9.175-9.175q.3-.3.675-.45t.75-.15q.4 0 .763.15t.662.45L22.425 3q.275.3.425.663T23 4.4q0 .375-.137.738t-.438.662L13.25 15zM21.025 4.4l-1.4-1.4zM11 13h1.4l5.8-5.8l-.7-.7l-.725-.7L11 11.575zm6.5-6.5l-.725-.7zl.7.7z"/></svg>-->
                   <button (click)="obtener(empleado.id)" class="btn btn-warning" data-bs-toggle="modal" data-bs-target="#staticBackdrop2">Editar</button>
               </td>
             </tr>
@@ -125,31 +123,31 @@
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="modal-body">
-        <form class="row" [formGroup]="formEmpleados" (ngSubmit)="edit()">
+        <form class="row" [formGroup]="formEmpleados" (ngSubmit)="edit(formEmpleados)">
           <div class="col-md-6">
             <label for="Nombre" class="form-label" style="font-weight: bold;">Nombre</label>
-            <input formControlName="nombre" name="nombre" type="text" class="form-control" id="Nombre" required>
+            <input formControlName="nombre" name="nombre" type="text" class="form-control" id="Nombre">
           </div>
           <div class="col-md-6">
             <label for="Apellido" class="form-label" style="font-weight: bold;">Apellido</label>
-            <input formControlName="apellido" name="apellido" type="text" class="form-control" id="Apellido" required>
+            <input formControlName="apellido"  name="apellido" type="text" class="form-control" id="Apellido" >
           </div>
           <div class="col-md-6">
             <label for="Usuario" class="form-label" style="font-weight: bold;">Usuario</label>
             <div class="input-group">
-              <input formControlName="usuario" name="usuario" type="text" class="form-control" id="Usuario" required>
+              <input formControlName="usuario" name="usuario" type="text" class="form-control" id="Usuario">
             </div>
           </div>
           <div class="col-md-6">
             <label for="Contrasenia" class="form-label" style="font-weight: bold;">Contraseña</label>
             <div class="input-group">
-              <input formControlName="contrasenia" name="contrasenia" type="text" class="form-control" id="Contrasenia" required>
+              <input formControlName="contrasenia" name="contrasenia" type="text" class="form-control" id="Contrasenia">
             </div>
           </div>
           <div class="col-md-6">
             <label for="Perfil" class="form-label" style="font-weight: bold;">Perfil</label>
             <div class="input-group">
-              <select formControlName="perfil" name="perfil" class="form-select" id="Perfil" aria-label="Default select example" required>
+              <select formControlName="perfil"  name="perfil" class="form-select" id="Perfil" aria-label="Default select example">
                 <option value="Empleado">Empleado</option>
               </select>
             </div>
@@ -157,14 +155,14 @@
           <div class="col-md-6">
             <label for="validationDefaultEstatus" class="form-label" style="font-weight: bold;">Estatus</label>
             <div class="input-group">
-              <select formControlName="estatus" name="estatus" class="form-select" id="Estatus" aria-label="Default select example" required>
+              <select formControlName="estatus" name="estatus" class="form-select" id="Estatus" aria-label="Default select example">
                 <option value="Activo">Activo</option>
                 <option value="Inactivo">Inactivo</option>
               </select>
             </div>
           </div>
           <div class="col-12">
-            <button class="btn btn-warning" type="submit" data-bs-dismiss="modal">Editar</button>
+            <button class="btn btn-warning" type="submit" [disabled]="!formEmpleados.valid" data-bs-dismiss="modal">Editar</button>
           </div>
         </form>
       </div>
