--- a/portal/src/app/Administrador/todos-los-registros/todos-los-registros.component.html
+++ b/portal/src/app/Administrador/todos-los-registros/todos-los-registros.component.html
@@ -5,7 +5,7 @@
         <a class="navbar-brand">
           <img src="assets/img-logo/Letras_Airtemp.png" alt="Bootstrap" width="30%" height="30%">
         </a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasDarkNavbar" aria-controls="offcanvasDarkNavbar" aria-label="Toggle navigation">
+        <button class="navbar-toggler" id="putamadre" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasDarkNavbar" aria-controls="offcanvasDarkNavbar" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="offcanvas offcanvas-end " tabindex="-1" id="offcanvasDarkNavbar" aria-labelledby="offcanvasDarkNavbarLabel">
