--- a/portal/src/app/Administrador/todos-los-registros/todos-los-registros.component.css
+++ b/portal/src/app/Administrador/todos-los-registros/todos-los-registros.component.css
@@ -1,6 +1,7 @@
 .contenedor{
   margin-top: 9%;
 }
+
 .buscador{
   margin-left: 5%;
 }
@@ -159,6 +160,10 @@ h5{
   cursor: pointer;
 }
  @media only screen and (max-width: 600px) and (orientation: portrait){
+  #putamadre{
+    width: 30%;
+    margin-left: 68%;
+  }
   .buscador{
     margin-top: 20%;
   }
@@ -170,6 +175,7 @@ h5{
   .inicio p,.final p {
     display: none; /* Oculta el texto 'Inicio' en tabletas y móviles */
   }
+
 
  /*---*/
  .buscador .group{
@@ -222,13 +228,7 @@ td:before {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
 }
-img{
-  width: 70%;
-}
-.navbar-toggler{
-  width: 30%;
-  margin-left: 65%;
-}
+
 
 td:nth-of-type(1):before { content: "Folio"; }
 td:nth-of-type(2):before { content: "Empleado"; }
