--- a/portal/src/app/altaInformacion/alta-maquinas/alta-maquinas.component.css
+++ b/portal/src/app/altaInformacion/alta-maquinas/alta-maquinas.component.css
@@ -111,6 +111,60 @@ th {
     max-width: 150px;
     margin-left: 15%;
   }
+  /*estilos para la vista movil de la tabla*/
+  .tabla-contenedor{
+    margin-top: 5%;
+    max-height: 650px;
+  }
+  table, thead, tbody, th, td, tr {
+    display: block;
+  }
+
+  th {
+    position: absolute;
+    top: -9999px;
+    left: -9999px;
+  }
+
+  tr {
+    border: 1px solid #dddddd;
+    margin-bottom: 10px;
+  }
+
+  td {
+    border: none;
+    border-bottom: 1px solid #dddddd;
+    position: relative;
+    padding-left: 50%;
+  }
+
+  td:before {
+    position: absolute;
+    top: 6px;
+    left: 6px;
+    width: 45%;
+    padding-right: 10px;
+    white-space: nowrap;
+    color: #005ba2;
+    font-weight: bold;
+  }
+  .container-fluid{
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+  }
+  img{
+    width: 70%;
+  }
+  .navbar-toggler{
+    width: 30%;
+    margin-left: 65%;
+  }
+
+  td:nth-of-type(1):before { content: "Codigo maquina u operación"; }
+  td:nth-of-type(2):before { content: "Nombre máquina"; }
+  td:nth-of-type(3):before { content: "Código interno de proceso"; }
+  td:nth-of-type(4):before { content: "Departamento"; }
+  td:nth-of-type(5):before { content: "Acciones"; }
 }
 @media only screen and (max-width: 850px) {
   .contenedor{
