--- a/portal/src/app/altaInformacion/alta-partes/alta-partes.component.html
+++ b/portal/src/app/altaInformacion/alta-partes/alta-partes.component.html
@@ -69,7 +69,7 @@
             <div class="input-group">
               <select [(ngModel)]="crearPrt.tipo" name="tipo" class="form-select" id="validationDefaultTipo" aria-label="Default select example" required>
                 <option selected disabled>Seleccionar</option>
-                <option value="PREENSAMBLE">PREENSAMBLE</option>
+                <option value="SUBENSAMBLE">SUBENSAMBLE</option>
                 <option value="PRODUCTO TERMINADO">PRODUCTO TERMINADO</option>
                 <option value="PRODUCTO COMPRADO">PRODUCTO COMPRADO</option>
                 <option value="MATERIA PRIMA">MATERIA PRIMA</option>
@@ -120,7 +120,7 @@
             <div class="input-group">
               <select [(ngModel)]="crearPrt.tipo" name="tipo" class="form-select" id="validationDefaultTipo" aria-label="Default select example" required>
                 <option selected disabled>Seleccionar</option>
-                <option value="PREENSAMBLE">PREENSAMBLE</option>
+                <option value="SUBENSAMBLE">SUBENSAMBLE</option>
                 <option value="PRODUCTO TERMINADO">PRODUCTO TERMINADO</option>
                 <option value="PRODUCTO COMPRADO">PRODUCTO COMPRADO</option>
                 <option value="MATERIA PRIMA">MATERIA PRIMA</option>
